# Testy_etykiet

./: GenerateLabelBusinessPack.py  GenerateLabelBusinessPackAllegro.py  GenerateLabelBusinessPackListAllegro_EPL.py  GenerateLabelBusinessPackListAllegro_PDF.py  GenerateLabelBusinessPackListAllegro_PDF10.py  GenerateLabelBusinessPackListAllegro_ZPL.py  GenerateLabelBusinessPackListTwo_EPL.py  GenerateLabelBusinessPackListTwo_PDF.py  GenerateLabelBusinessPackListTwo_PDF10.py  GenerateLabelBusinessPackListTwo_ZPL.py  GenerateLabelBusinessPackList_EPL.py  GenerateLabelBusinessPackList_PDF.py  GenerateLabelBusinessPackList_PDF10.py  GenerateLabelBusinessPackTwo.py  GenerateOrlenPaczkaLabel_PDF.py  GenerateOrlenPaczkaLabel_PDF10.py  GenerateOrlenPaczkaLabel_ZPL.py  GenerateOrlenPaczkaReturn2home_EPL.py  GenerateOrlenPaczkaReturn2home_PDF.py  GenerateOrlenPaczkaReturn2home_PDF10.py  GenerateOrlenPaczkaReturn2home_ZPL.py  GenerateStandardCustomerReturn_PDF.py  GenerateStandardCustomerReturn_PDF10.py  GenerateStandardCustomerReturn_ZPL.py  GenerateStnadardCustomerReturn_EPL.py  LabelPrintDuplicate.py  LabelPrintDuplicateList.py  LabelPrintDuplicateListTwo_EPL.py  LabelPrintDuplicateListTwo_PDF.py  LabelPrintDuplicateListTwo_PDF10.py  LabelPrintDuplicateListTwo_ZPL.py  LabelPrintDuplicateTwo_EPL.py  LabelPrintDuplicateTwo_PDF.py  LabelPrintDuplicateTwo_PDF10.py  LabelPrintDuplicateTwo_ZPL.py  common_data.py  pyproject.toml
label_report_generator/: epl_renderer.py  main.py  report_generator.py
